--- a/src/components/AddRecipe/AddRecipe.module.scss
+++ b/src/components/AddRecipe/AddRecipe.module.scss
@@ -37,13 +37,6 @@
         gap: 0.5rem;
 
         &.step {
-          .order {
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
           .do {
             flex: 1;
           }
@@ -53,8 +46,12 @@
             flex-direction: row;
             gap: 0.5rem;
 
-            input[type="number"] {
+            .number {
               width: 100px;
+            }
+
+            .time-units {
+              justify-content: flex-start;
             }
           }
         }
@@ -63,8 +60,12 @@
           margin-left: auto;
           display: flex;
           flex-direction: row;
-          gap: 0.5rem;
+          gap: 0.1rem;
           height: 40px;
+
+          > button {
+            padding: 0.3em;
+          }
         }
       }
 
