--- a/src/shared/templates/Textarea/FWTextarea.module.scss
+++ b/src/shared/templates/Textarea/FWTextarea.module.scss
@@ -23,7 +23,7 @@
       font-family: InsightWebRegular, Arial, sans-serif;
       font-size: 16px;
       min-height: 40px;
-      padding: 0.375rem 2.5rem 0.375rem 0.375rem;
+      padding: 0.375rem;
       color: $fw-primary;
       text-align: inherit;
       text-decoration: none;
@@ -42,6 +42,7 @@
       }
 
       &.error {
+        padding: 0.375rem 2.5rem 0.375rem 0.375rem;
         border: 1px solid $fw-error;
         background-image: url("../../../assets/images/form-validation/error.svg");
         background-repeat: no-repeat;
@@ -50,6 +51,7 @@
       }
 
       &.valid {
+        padding: 0.375rem 2.5rem 0.375rem 0.375rem;
         border: 1px solid $fw-valid;
         background-image: url("../../../assets/images/form-validation/valid.svg");
         background-repeat: no-repeat;
