--- a/src/components/AddRecipe/AddRecipe.module.scss
+++ b/src/components/AddRecipe/AddRecipe.module.scss
@@ -6,21 +6,9 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1rem;
 
     .row {
-      display: flex;
-      flex-direction: row;
-      gap: 0.5rem;
-
-      &.duration {
-        input[type="number"] {
-          width: 100px;
-        }
-      }
-    }
-
-    .combo {
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
@@ -30,15 +18,24 @@
         font-size: 20px;
       }
 
-      .row {
+      .fields {
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
         gap: 0.5rem;
 
-        &.step {
+        &.duration {
+          .number {
+            width: 100px;
+          }
+        }
+
+        &.steps {
           .do {
-            flex: 1;
+            width: 50%;
+
+            label {
+              font-size: 16px;
+            }
           }
 
           .duration {
@@ -50,43 +47,116 @@
               width: 100px;
             }
 
-            .time-units {
-              justify-content: flex-start;
+            label {
+              font-size: 16px;
             }
+          }
+
+          .buttons {
+            margin-top: 3px;
+            align-items: center;
+          }
+        }
+
+        .quantity {
+          display: flex;
+          flex-direction: row;
+          gap: 0.5rem;
+
+          .number {
+            width: 100px;
+          }
+
+          label {
+            font-size: 16px;
           }
         }
 
         .buttons {
-          margin-left: auto;
+          height: 100%;
+          align-items: flex-end;
           display: flex;
           flex-direction: row;
-          gap: 0.1rem;
-          height: 40px;
+          margin-right: auto;
 
           > button {
+            width: 40px;
+            height: 40px;
             padding: 0.3em;
           }
         }
       }
-
-      // &.steps {
-      //   display: flex;
-      //   flex-direction: column;
-      //   gap: 0.5rem;
-
-      //   .step {
-      //     display: flex;
-      //     flex-direction: row;
-      //     gap: 0.5rem;
-
-      // .buttons {
-      //   display: flex;
-      //   flex-direction: row;
-      //   gap: 0.5rem;
-      //   height: 40px;
-      // }
-      //   }
-      // }
     }
+
+    // .combo {
+    //   display: flex;
+    //   flex-direction: column;
+    //   gap: 0.5rem;
+
+    //   .label {
+    //     font-family: InsightWebBold, Arial, sans-serif;
+    //     font-size: 20px;
+    //   }
+
+    //   .row {
+    //     display: flex;
+    //     flex-direction: row;
+    //     align-items: flex-start;
+    //     gap: 0.5rem;
+
+    //     &.ingredient {
+    //       .quantity {
+    //         display: flex;
+    //         flex-direction: row;
+    //         gap: 0.5rem;
+
+    //         .number {
+    //           width: 100px;
+    //         }
+
+    //         .measuring-units {
+    //           justify-content: flex-start;
+    //         }
+    //       }
+
+    //       .buttons {
+    //         width: 100%;
+    //         margin-right: auto;
+    //       }
+    //     }
+
+    //     &.step {
+    //       .do {
+    //         flex: 1;
+    //       }
+
+    //       .duration {
+    //         display: flex;
+    //         flex-direction: row;
+    //         gap: 0.5rem;
+
+    //         .number {
+    //           width: 100px;
+    //         }
+
+    //         .time-units {
+    //           justify-content: flex-start;
+    //         }
+    //       }
+    //     }
+
+    //     .buttons {
+    //       margin-left: auto;
+    //       display: flex;
+    //       flex-direction: row;
+    //       gap: 0.1rem;
+    //       height: 40px;
+
+    //       > button {
+    //         padding: 0.3em;
+    //       }
+    //     }
+    //   }
+    // }
   }
 }
