fixed more enums+types, fixed some type errors mostly formik related in AddRecipe component, small adjustments to RecipeBook

--- a/src/shared/templates/Button/FwButton.module.scss
+++ b/src/shared/templates/Button/FwButton.module.scss
@@ -7,7 +7,7 @@
   font-family: InsightWebRegular, Arial, sans-serif;
   font-size: 16px;
   display: flex;
-  align-items: center;
+  justify-content: center;
   border-radius: 0.375rem;
   padding: 0.5em 1em;
 
