--- a/src/components/RecipeBook/RecipeBook.module.scss
+++ b/src/components/RecipeBook/RecipeBook.module.scss
@@ -34,23 +34,12 @@
         }
       }
 
-      .filter-by {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        border-right: 2px solid $fw-primary;
-        padding-right: 1em;
-
-        button {
-          align-self: flex-end;
-        }
-      }
-
       .scope {
         display: flex;
         flex-direction: column;
         border-right: 2px solid $fw-primary;
         padding-right: 1em;
+        gap: 0.5em;
       }
 
       .tags {
@@ -58,17 +47,32 @@
         flex-direction: column;
         border-right: 2px solid $fw-primary;
         padding-right: 1em;
+        gap: 0.5em;
       }
 
-      .manage {
+      .manage-recipes {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         padding-right: 1em;
+        gap: 0.5em;
+
+        .buttons {
+          display: flex;
+          flex-direction: row;
+          gap: 0.5em;
+        }
       }
     }
 
-    .preview {
+    .search {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 0.5em;
+    }
+
+    .list {
       width: 100%;
       height: 100%;
       border: 1px solid $fw-primary;
@@ -83,18 +87,7 @@
     padding-top: 1em;
     gap: 0.5em;
 
-    .search {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      button {
-        padding: 2px !important;
-      }
-    }
-
-    .list {
+    .preview {
       width: 100%;
       height: 100%;
       border: 1px solid $fw-primary;
