--- a/src/components/RecipeBook/RecipeBook.module.scss
+++ b/src/components/RecipeBook/RecipeBook.module.scss
@@ -77,6 +77,40 @@
       height: 100%;
       border: 1px solid $fw-primary;
       border-radius: 0.5em;
+
+      .list-header {
+        font-family: InsightWebBold, Verdana, Helvetica, Arial, sans-serif;
+        height: 30px;
+        font-size: 18px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 0.375em 0.5em;
+        margin-right: 20px;
+        border-bottom: 2px solid $fw-primary;
+
+        .name {
+          margin-left: 10px;
+        }
+
+        .duration-popularity {
+          margin-left: auto;
+
+          .duration {
+            margin-right: 50px;
+          }
+
+          .popularity {
+            margin-right: 10px;
+          }
+        }
+      }
+
+      .list-content {
+        overflow: auto;
+        height: 400px;
+      }
     }
   }
 
@@ -92,6 +126,10 @@
       height: 100%;
       border: 1px solid $fw-primary;
       border-radius: 0.5em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
     }
   }
 }
