--- a/src/components/RecipeBook/RecipeBook.module.scss
+++ b/src/components/RecipeBook/RecipeBook.module.scss
@@ -128,7 +128,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 24px;
+
+      .placeholder {
+        font-size: 24px;
+      }
     }
   }
 }
