adding cooking steps to Recipe Preview

--- a/src/components/RecipeBook/RecipePreview/RecipePreview.module.scss
+++ b/src/components/RecipeBook/RecipePreview/RecipePreview.module.scss
@@ -55,6 +55,13 @@
           font-size: 20px;
         }
       }
+
+      .steps {
+        .steps-title {
+          font-family: InsightWebBold, Verdana, Helvetica, Arial, sans-serif;
+          font-size: 20px;
+        }
+      }
     }
   }
 }
