--- a/src/components/RecipeBook/RecipePreview/RecipePreview.module.scss
+++ b/src/components/RecipeBook/RecipePreview/RecipePreview.module.scss
@@ -49,7 +49,9 @@
       overflow: auto;
       height: 400px;
 
-      .creation {
+      .core-details {
+        display: flex;
+        flex-direction: column;
         font-size: 14px;
         margin-bottom: 10px;
       }
