--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -18,6 +18,9 @@ body {
   > div {
     height: 100%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
